k8s/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring

  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix

        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
